// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarItem renders empty SideBarItem 1`] = `
<Link
  to={
    Object {
      "pathname": undefined,
    }
  }
>
  <MenuItem
    className="sidebar-item "
  >
    <div
      className="sidebar-item-alignment-container"
    >
      <span>
        <Icon
          as="i"
          size="large"
        />
      </span>
      <span />
    </div>
  </MenuItem>
</Link>
`;

exports[`SideBarItem renders highlighted SideBarItem that navigates to /feed/trending 1`] = `
<Link
  to={
    Object {
      "pathname": "/feed/trending",
    }
  }
>
  <MenuItem
    className="sidebar-item highlight-item"
  >
    <div
      className="sidebar-item-alignment-container"
    >
      <span>
        <Icon
          as="i"
          name="fire"
          size="large"
        />
      </span>
      <span>
        Trending
      </span>
    </div>
  </MenuItem>
</Link>
`;

exports[`SideBarItem renders highlighted SideBarItem with no navigaiton 1`] = `
<Link
  to={
    Object {
      "pathname": undefined,
    }
  }
>
  <MenuItem
    className="sidebar-item "
  >
    <div
      className="sidebar-item-alignment-container"
    >
      <span>
        <Icon
          as="i"
          name="fire"
          size="large"
        />
      </span>
      <span>
        Trending
      </span>
    </div>
  </MenuItem>
</Link>
`;

exports[`SideBarItem renders non-highlighted SideBarItem that navigates to /feed/trending 1`] = `
<Link
  to={
    Object {
      "pathname": undefined,
    }
  }
>
  <MenuItem
    className="sidebar-item "
  >
    <div
      className="sidebar-item-alignment-container"
    >
      <span>
        <Icon
          as="i"
          name="fire"
          size="large"
        />
      </span>
      <span>
        Trending
      </span>
    </div>
  </MenuItem>
</Link>
`;
